Finished Setting up the FileTableView as the Details View
Can switch between Details View and Icons View